# praetor

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  doctor.sh  setup.bat  setup.ps1  setup.sh  skill.json
mcp-server/: pyproject.toml  requirements.txt
mcp-server/.claude/skills/: autopilot.md  burp-workflow.md  craft-payload.md  hunt.md  investigate.md  report-templates.md  resume.md  verify-finding.md
mcp-server/src/burpsuite_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
mcp-server/src/burpsuite_mcp/data/: compliance_mappings.json
mcp-server/src/burpsuite_mcp/knowledge/: _INDEX.md  a2a_protocol.json  access_control.json  ai_prompt_injection.json  anon_cloud_expansion.json  api_abuse.json  api_inventory.json  argv_injection.json  atlassian_confluence.json  auth_bypass.json  authentication.json  browser_storage.json  business_logic.json  cache_deception_v2.json  cache_poisoning.json  captcha_bypass.json  ci_actions_injection.json  citrix_netscaler.json  clickjacking.json  client_side_messaging.json  client_side_path_traversal.json  client_side_request.json  cloud_api_gateway.json  cloud_function_url.json  cloud_storage_misconfig.json  cloud_webapp.json  command_injection.json  content_type_confusion.json  cors.json  crlf_injection.json  crushftp.json  crypto_weakness.json  cspp.json  csrf.json  css_injection.json  csv_injection.json  dangling_markup.json  dependency_confusion.json  deserialization.json  desktop_electron.json  (+118 more)
mcp-server/src/burpsuite_mcp/payloads/: adb_commands.json  auth_bypass.json  cache_poisoning.json  command_injection.json  cors.json  csrf.json  deserialization.json  file_upload.json  hpp.json  lfi.json  mobile_api.json  nosql.json  oauth.json  open_redirect.json  path_traversal.json  prototype_pollution.json  race_condition.json  sqli.json  ssrf.json  ssti.json  websocket.json  xss.json  xxe.json
mcp-server/src/burpsuite_mcp/processing/: encoding.py  formatters.py
mcp-server/src/burpsuite_mcp/tools/: _framework_map.py  _request_headers.py  _runtime_guard.py  _scope_mode.py  a2a_agent_card_probe.py  advisor.py  analyze.py  apollo_federation_probe.py  auth_negotiate.py  benchmark.py  bopla_probe.py  browser.py  bucket_urls.py  burp_tools.py  ci_audit.py  claude_code_hook_scanner.py  clean_room_confirm.py  cloud_audit.py  collaborate.py  correlate.py  csp_analyzer.py  cua_probe.py  cve.py  cve_variant_probe.py  dns_rebind_probe.py  dom.py  dom_probe.py  dom_probe_init.js  dom_xss_executed.py  edge.py  export.py  extract.py  extract_batch.py  fastmcp_openapi_ssrf_probe.py  graphql_csrf_probe.py  grpc_probe.py  harvest.py  (+67 more)
mcp-server/tests/: _baseline_assess.json  _baseline_capture.py  test_advisor_kb.py  test_advisor_questions.py  test_assess_finding.py  test_client_errors.py  test_collaborator_substitution.py  test_cve_match.py  test_encoding.py  test_finding_projection.py  test_findings_remap.py  test_formatters.py  test_import_scope.py  test_jwt_forge.py  test_kb_new_files_load.py  test_mutate_payload.py  test_praetor_v1.py  test_recon_scanning_split.py  test_request_headers.py  test_research.py  test_research_dispatch.py  test_reset_tokens.py  test_run_cmd.py  test_safety.py  test_scope_mode.py  test_seclists_detection.py  test_smart_wordlist.py  test_ssti_engine.py  test_w10_verdict_refactor.py  test_w11_verdict_refactor.py  test_w12_verdict_refactor.py  test_w13_verdict_refactor.py  test_w14_verdict_pipeline_integration.py  test_w14_verdict_refactor.py  test_w15_verdict_refactor.py  test_w16_playbooks.py  test_w17_playbooks.py  test_w18_kb_2025h2.py  test_w18_report_skeletons.py  test_w19_playbooks.py  (+59 more)
(+503 files in other folders)
