[project]
name = "burpsuite-mcp"
version = "0.1.0"
description = "MCP server for Burp Suite - Claude Code as pentesting brain"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.27.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
]

[project.scripts]
burpsuite-mcp = "burpsuite_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burpsuite_mcp"]
